# irc-chat

./: .gitignore  CMakeLists.txt  client.c  server.c  shared.c  shared.h
client/: config.c  config.h  main.c  ui.c  ui.h  user_color.c  user_color.h
client_ui/: main.c  ui.c  ui.h
network/: network.c  network.h
server/: config.c  config.h  main.c
